# taxini-app-public

./: .env.example  .gitignore  IMPLEMENTATION_STEPS.md  LICENSE  PRIVATE_FEATURES_GUIDE.md  PROJECT_VERIFICATION.md  PUBLIC_README_ENHANCED.md  PUBLIC_RELEASE_COMPLETE.md  PUBLIC_RELEASE_NOTES.md  README.md  REPOSITORY_STRATEGY.md  SAFE_IMPLEMENTATION_GUIDE.md  SIMPLIFICATION_PLAN.md  TRIP_TIMEOUT_FEATURE.md  start-all.sh  start-backend.sh  start-frontend.sh
backend/: .env.example  main.py  pyproject.toml  railway.toml
backend/docs/: COST_CALCULATION_SYSTEM.md  GOOGLE_PLACES_INTEGRATION.md  JWT_TOKEN_ISSUE_FIXED.md  NO_DRIVERS_FIX.md  REAL_TIME_NAVIGATION.md  RIDER_CONFIRMATION_FLOW.md  TOKEN_VALIDATION_FIX.md  USER_NOT_FOUND_FIX.md  VISUAL_CONFIRMATION_FLOW.md  realtime_streaming.md
backend/docs/examples/: frontend_example.jsx
backend/scripts/: add_rating_fields.sql  create_admin.py
backend/src/: __init__.py  app.py
backend/src/api/: __init__.py
backend/src/api/v1/: __init__.py  admin.py  admin_tickets.py  auth.py  drivers.py  locations.py  notifications.py  riders.py  tickets.py  users.py
backend/src/core/: __init__.py  exceptions.py  security.py  settings.py
backend/src/db/: __init__.py  session.py
backend/src/db/migrations/: add_notifications_table.sql  env.py
backend/src/db/migrations/versions/: 64cf31e821cc_add_driver_account_status_column.py  6e8ebe03791c_add_rating_comments_and_rider_.py  7db8928812ce_add_trips_table.py  8b5ac15bca4c_fix_enum_values.py  923ccf97cd1d_convert_enum_columns_to_varchar.py  9823e9e78685_add_driver_status_column.py  9d162d8bc493_initial_migration_create_user_tables.py  a03aed67a167_remove_overall_note_from_driver.py  aed2403cbf49_merge_heads.py  b01e82142b4a_fix_enum_values_for_user_roles_and_auth_.py  b2be6f78276a_create_tickets_table.py  c2313ad0a0ee_create_locations_table.py  d4f5e6a7b8c9_add_index_trips_status_driver_id.py  e44b627fc11f_add_rider_confirmed_pickup_field.py  f55c738ed22g_add_cost_breakdown_fields.py
backend/src/models/: __init__.py  enums.py  location.py  mixins.py  notification.py  settings.py  ticket.py  trip.py  user.py
backend/src/schemas/: __init__.py  admin.py  auth.py  ticket.py  user.py
backend/src/services/: __init__.py  admin.py  admin_auth.py  admin_settings.py  admin_stats.py  admin_trip.py  auth.py  geocoding.py  geocoding_old.py  location.py  notification.py  realtime_location.py  supabase_client.py  ticket.py  trip.py  users.py
backend/src/workers/: __init__.py
backend/tests/: conftest.py  test_admin.py  test_admin_auth.py  test_admin_services.py  test_admin_settings.py  test_admin_statistics.py  test_admin_trip_history.py  test_auth.py  test_location_endpoints.py  test_location_service.py  test_password_reset.py  test_realtime_location.py  test_riders.py  test_schemas.py  test_supabase_client.py  test_ticket_endpoints.py  test_ticket_service.py  test_trip_notification_flow.py  test_user_endpoints.py  test_user_service.py
(+79 files in other folders)
